# wishing-star

./: .gitignore  README.md  pyproject.toml  start.py
doc/: README_openai.md  credential_template.yml
src/wishing_star/: Exceptions.py  OpenAIHandler.py  WishingStarClient.py  YGOCardQueryHandler.py  main.py  utils.py
